# LiteBuild

./: build_engine.py  build_logger.py  build_workers.py  command_generator.py  lite_build_controller.py  lite_build_runner.py  litebuild.py  pyproject.toml  requirements.txt  schema.py
LiteBuild/: build_engine.py  build_logger.py  build_workers.py  command_generator.py  csv_table.py  dependency_graph.py  lite_build_controller.py  lite_build_runner.py  schema.py  sleep_inhibitor.py
docs/: configuration.md  readme.md
docs/sample configs/: LB_Color_Relief.yml  LB_classify_OSM.yml
tests/: config.yml  test_build_engine.py
